--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -49,7 +49,42 @@
     <div class="carrusel__home">
     </div>
     <main>
-      
+      <h1>Nuestra comunidad opina</h1>
+      <section class="car">
+        <div class="card__perfil">
+          <div class="card__nombre">
+            <img src="/images/cara6.jpg" alt="">
+            <h2>Ramiro Cunar</h2>
+          </div>
+          <div class="card__descripcion">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla 
+              dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut quaerat esse
+               quisquam nulla eaque modi voluptate, consectetur ad.</p>
+          </div>
+        </div>
+        <div class="card__perfil">
+          <div class="card__nombre">
+            <img src="/images/cara5.jpg" alt="">
+            <h2>Mariana Blas</h2>
+          </div>
+          <div class="card__descripcion">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla 
+              dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut quaerat esse
+               quisquam nulla eaque modi voluptate, consectetur ad.</p>
+          </div>
+        </div>
+        <div class="card__perfil">
+          <div class="card__nombre">
+            <img src="/images/cara4.jpg" alt="">
+            <h2>Iris Luna</h2>
+          </div>
+          <div class="card__descripcion">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla 
+              dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut quaerat esse
+               quisquam nulla eaque modi voluptate, consectetur ad.</p>
+          </div>
+        </div>
+      </section>
       <h2 class="productosRelacionados">Productos Relacionados<h2>
       <section class="row">
           <div class="card estilo-c">
