--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -52,6 +52,7 @@
         </nav>
     </header>
     <div class="carrusel__home">
+        <img src="/images/logo.png" alt="logo" class="banner">
     </div>
     <main>
         <div class="subtitulo__home">
