--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -1,8 +1,18 @@
 .home .carrusel__home {
     width: 100%;
-    height: 400px;
-    background-color: gray;
+    height: 200px;
+    background-image: url(/images/banner.png);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+.home .carrusel__home .banner{
+    width: 150px;
+}
+
 
 /*************************************************
 primera parte del main
