--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -1,10 +1,57 @@
+/* Producto principal */
+
+.productCard .producto{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
+}
+
+.productCard .producto__imagen img{
+    width: 500px;
+    height: 80%;
+    border-radius: 5px;
+    padding-right: 10px;
+
+}
+.productCard .producto__imagen .promo{
+    position: absolute;
+    top: 10px;
+    left: 0;
+    font-size: 20px;
+    background: rgb(174, 214, 247);
+    padding: 15px;
+    color: var(--violetaOscuro);
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+  }
+
+.productCard .producto__cart{
+    margin-top: 2px;
+    text-decoration: none;
+    color: var(--violetaOscuro);
+    background-color: aquamarine;
+    padding: 15px;
+    border: 1px solid white;
+    border-radius: 25px;
+    font-size: 16px;
+  }
+  .productCard .producto__cart:hover{
+    color: var(--verdeOscuro);
+    background-color: #FDF287;
+    border: 1px solid white;
+  }
+
+
+/* Nuestra Comunidad Opina */
+
 h1{
     text-align: center;
     padding: 10px;
     background-color: aquamarine;
 }
 
-.car{
+.tarjetas{
     width: 100%;
     display:flex;
     gap: 50px;
@@ -56,13 +103,15 @@ h1{
 .productosRelacionados{
     text-align: center;
     color: var(--violetaOscuro);
+    background-color: aquamarine;
+    margin-bottom: 30px;
 }
 .productCard .row{
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 30px;
 }
 
 .productCard .card{
@@ -135,9 +184,10 @@ h1{
     padding: 15px;
     border: 1px solid white;
     border-radius: 25px;
+    font-size: 16px;
   }
   .estilo-c .add-cart:hover{
-    color: aquamarine;
+    color: var(--verdeOscuro);
     background-color: #FDF287;
     border: 1px solid white;
   }
