--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -53,7 +53,6 @@
     <section class="producto">
       <div class="producto__imagen">
         <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
-        <span class="precio"> $ 500.-</span>
       </div>
       <div class="producto__texto">
         <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
@@ -123,11 +122,13 @@
                 <span class="promo">10% off</span>
               </div>
             </a>
+            <div class="info-container">
             <h2> Jabón Humectante</h2>
             <h4>BioCorporal</h4>
             <h3>$ 300.00.-</h3>
             <span class="rating">⭐⭐⭐</span>
             <a href="#" class="add-cart">Lo quiero!🤩</a>
+          </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -136,11 +137,13 @@
                 <span class="promo">25% off</span>
               </div>
             </a>
+            <div class="info-container">
             <h2> Kit Exfoliante </h2>
             <h4>BioSpa<h4>
                 <h3>$ 600.00.-</h3>
                 <span class="rating">⭐⭐⭐⭐</span>
                 <a href="#" class="add-cart">Lo quiero!🤩</a>
+              </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -149,11 +152,13 @@
                 <span class="promo">15% off</span>
               </div>
             </a>
+            <div class="info-container">
             <h2>Kit Coco</h2>
             <h4>BioCapilar</h4>
             <h3>$ 300.00.-</h3>
             <span class="rating">⭐⭐⭐⭐</span>
             <a href="#" class="add-cart">Lo quiero!🤩</a>
+          </div>
           </div>
         </section>
         <div>
