--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -53,6 +53,8 @@
     <section class="producto">
       <div class="producto__imagen">
         <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
+        <h2>$ 300.-</h2>
+        <span class="rating">⭐⭐⭐⭐</span>
       </div>
       <div class="producto__texto">
         <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
@@ -63,8 +65,8 @@
           Para no contaminar el suelo con restos de susltancias químicas, que pueden quedar alojadas 
           en la esponja.♻️ <br>
           🌻<span style="font-weight: bold;">Nuestra versión exfoliante de Naranja y Café
-          combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span>
-          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; SUMATE AL CAMBIO💚
+          combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span> <br>
+          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
           <a href="#" class="add-cart">Lo quiero!🤩</a>
