--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -1,48 +1,35 @@
 /* Producto principal */
 
-.productCard .producto{
+.productCard .producto {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     padding: 20px;
+    margin-bottom: 40px;
 }
 
-.productCard .producto__texto{
-    box-shadow: 1px 1px 5px black;
-    border-radius: 5px;
+.productCard .producto__texto {
     line-height: 30px;
-    padding: 15px;
+    padding: 0px 15px;
     color: var(--violetaOscuro);
+    text-align: center;
 }
 
-
-.productCard .producto__imagen img{
+.productCard .producto__imagen img {
     width: 500px;
     height: 80%;
-    border-radius: 5px;
     padding-right: 10px;
-
 }
-.productCard .producto__imagen .promo{
-    position: absolute;
-    top: 10px;
-    left: 0;
-    font-size: 20px;
-    background: rgb(174, 214, 247);
-    padding: 15px;
-    color: var(--violetaOscuro);
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-  }
 
-  .productCard .producto__cart{
-      margin-top: 20px;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-  }
+/* Botón "Lo quiero!" */
+.productCard .producto__cart {
+    margin-top: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
 
-.productCard .producto__cart a{
+.productCard .producto__cart a {
     margin-top: 2px;
     text-decoration: none;
     color: var(--violetaOscuro);
@@ -52,25 +39,26 @@
     font-size: 16px;
     padding: 10px;
     font-weight: bold;
-  }
-  .productCard .producto__cart a:hover{
+}
+
+.productCard .producto__cart a:hover {
     color: var(--verdeOscuro);
-    background-color: #FDF287 ;
+    background-color: #FDF287;
     border: 1px solid white;
-  }
+}
 
 
 /* Nuestra Comunidad Opina */
 
-h1{
+h1 {
     text-align: center;
     padding: 10px;
     background-color: aquamarine;
 }
 
-.tarjetas{
+.tarjetas {
     width: 100%;
-    display:flex;
+    display: flex;
     gap: 50px;
     flex: wrap;
     justify-content: space-evenly;
@@ -78,52 +66,54 @@ h1{
     padding-bottom: 80px;
 }
 
-.card__perfil{
+.card__perfil {
     width: 310px;
     padding: 20px;
     box-shadow: 1px 1px 5px black;
     border-radius: 5px;
 }
 
-.card__perfil:hover{
+.card__perfil:hover {
     border: solid var(--verdeOscuro) 2px;
 }
 
-.card__perfil:hover img{
+.card__perfil:hover img {
     transform: rotate(-360deg);
 }
 
-.card__nombre{
+.card__nombre {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
 }
 
-.card__nombre img{
+.card__nombre img {
     width: 140px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px black;
     transition: all .10s;
 }
 
-.card__nombre h2{
+.card__nombre h2 {
     padding-top: 20px;
 }
 
-.card__descripcion{
+.card__descripcion {
     text-shadow: black;
 }
 
 
 /* Productos Relacionados😍 */
-.productosRelacionados{
+
+.productosRelacionados {
     text-align: center;
     color: var(--violetaOscuro);
     background-color: aquamarine;
     margin-bottom: 30px;
 }
-.productCard .row{
+
+.productCard .row {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -131,42 +121,43 @@ h1{
     padding: 30px;
 }
 
-.productCard .card{
+.productCard .card {
     width: 33%;
 }
 
-.productCard .estilo-c{
+.productCard .estilo-c {
     font-family: "Montserrat Alternates", sans-serif;
 }
 
-.productCard .estilo-c a{
+.productCard .estilo-c a {
     text-decoration: none;
     color: var(--violetaOscuro);
 }
 
-.productCard .estilo-c a:hover{
+.productCard .estilo-c a:hover {
     text-decoration: underline aquamarine;
     color: var(--verdeOscuro);
-} 
- .productCard .estilo-c .img-container{
-    overflow:hidden;
+}
+
+.productCard .estilo-c .img-container {
+    overflow: hidden;
     height: 300px;
     position: relative;
 }
 
-.productCard .estilo-c .img-container img{
+.productCard .estilo-c .img-container img {
     width: 100%;
     position: absolute;
     top: -20%;
     transition: all 0.5s;
 }
 
-.estilo-c:hover .img-container img{
+.estilo-c:hover .img-container img {
     transform: scale(1.2);
-}  
+}
 
 
-  .estilo-c .img-container .promo{
+.estilo-c .img-container .promo {
     position: absolute;
     top: 10px;
     left: 0;
@@ -176,23 +167,25 @@ h1{
     color: var(--violetaOscuro);
     border-bottom-right-radius: 25px;
     border-top-right-radius: 25px;
-  }
+}
 
-  
-  .estilo-c .info-container h2{
+
+.estilo-c .info-container h2 {
     font-size: 22px;
-  }
+}
 
-  .estilo-c .info-container h4{
+.estilo-c .info-container h4 {
     font-size: 18px;
-  }
-  .estilo-c .info-container h3,
-  .estilo-c .info-container .promo,
-  .estilo-c .info-container span{
+}
+
+.estilo-c .info-container h3,
+.estilo-c .info-container .promo,
+.estilo-c .info-container span {
     padding: 15px;
     width: 90%;
-  }
-  .estilo-c .add-cart{
+}
+
+.estilo-c .add-cart {
     margin-top: 2px;
     text-decoration: none;
     color: var(--violetaOscuro);
@@ -201,9 +194,10 @@ h1{
     border: 1px solid white;
     border-radius: 25px;
     font-size: 16px;
-  }
-  .estilo-c .add-cart:hover{
+}
+
+.estilo-c .add-cart:hover {
     color: var(--verdeOscuro);
     background-color: #FDF287;
     border: 1px solid white;
-  }
+}
