arreglo de color iconos

--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -187,7 +187,7 @@
     }
 
     .header__iconos a{
-        background-color: var(--VerdeClaro-Opaco);
+        background-color: var(--verdeClaro-Opaco);
         margin-right: 2px;
         height: 40px;
         display: flex;
