--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -58,19 +58,19 @@
       </div>
       <div class="producto__texto">
         <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
-        <p>La luffa (o esponja vegetal) tiene propiedades exfoliantes, ideal 
+        <p>La luffa (o esponja vegetal) tiene propiedades exfoliantes, ideal
           para zonas a suavizar: codos, pies, manos. <br>
           ♻️Cuando consideramos que ha cumplido su ciclo, la podés tirar en el compost, o
           cualquier parte de la tierra, por éste motivo es importante usar jabones biodegradables.
-          Para no contaminar el suelo con restos de susltancias químicas, que pueden quedar alojadas 
+          Para no contaminar el suelo con restos de susltancias químicas, que pueden quedar alojadas
           en la esponja.♻️ <br>
           🌻<span style="font-weight: bold;">Nuestra versión exfoliante de Naranja y Café
-          combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span> <br>
+            combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span> <br>
           Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
           <a href="#" class="add-cart">Lo quiero!🤩</a>
-          </div>
+        </div>
       </div>
     </section>
     <h1>Nuestra comunidad opina</h1>
@@ -125,12 +125,12 @@
               </div>
             </a>
             <div class="info-container">
-            <h2> Jabón Humectante</h2>
-            <h4>BioCorporal</h4>
-            <h3>$ 300.00.-</h3>
-            <span class="rating">⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero!🤩</a>
-          </div>
+              <h2> Jabón Humectante</h2>
+              <h4>BioCorporal</h4>
+              <h3>$ 300.00.-</h3>
+              <span class="rating">⭐⭐⭐</span>
+              <a href="#" class="add-cart">Lo quiero!🤩</a>
+            </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -140,12 +140,12 @@
               </div>
             </a>
             <div class="info-container">
-            <h2> Kit Exfoliante </h2>
-            <h4>BioSpa<h4>
-                <h3>$ 600.00.-</h3>
-                <span class="rating">⭐⭐⭐⭐</span>
-                <a href="#" class="add-cart">Lo quiero!🤩</a>
-              </div>
+              <h2> Kit Exfoliante </h2>
+              <h4>BioSpa<h4>
+                  <h3>$ 600.00.-</h3>
+                  <span class="rating">⭐⭐⭐⭐</span>
+                  <a href="#" class="add-cart">Lo quiero!🤩</a>
+            </div>
           </div>
           <div class="card estilo-c">
             <a href="#">
@@ -155,16 +155,16 @@
               </div>
             </a>
             <div class="info-container">
-            <h2>Kit Coco</h2>
-            <h4>BioCapilar</h4>
-            <h3>$ 300.00.-</h3>
-            <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero!🤩</a>
-          </div>
+              <h2>Kit Coco</h2>
+              <h4>BioCapilar</h4>
+              <h3>$ 300.00.-</h3>
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Lo quiero!🤩</a>
+            </div>
           </div>
         </section>
-        <div>
-          <img src="/images/foto_consejos.jpg" alt="" style="width:100%; height: 500px;">
+        <div class="banner">
+          <img src="/images/foto_consejos.jpg" alt="">
         </div>
   </main>
   <footer class="footer">
