--- a/site_ViveBio/public/css/productCard.css
+++ b/site_ViveBio/public/css/productCard.css
@@ -72,6 +72,10 @@
     border: 1px solid white;
 }
 
+@media (min-width: 460px) {
+
+}
+
 
 /* Nuestra Comunidad Opina */
 
@@ -134,6 +138,26 @@
 
 .card__descripcion {
     text-shadow: black;
+}
+
+@media (max-width: 460px) {
+    .tarjetas {
+        width: 100%;
+        display: flex;
+        gap: 20px;
+        flex: nowrap;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+        padding-bottom: 80px;
+        align-items: center;
+    }
+    .card__perfil {
+        width: 180px;
+        padding: 20px;
+        flex-direction: column;
+        font-size: 12px;
+    
 }
 
 
