--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -128,7 +128,7 @@
               <h2> Jabón Humectante</h2>
               <h4>BioCorporal</h4>
               <h3>$ 300.00.-</h3>
-              <span class="rating">⭐⭐⭐</span>
+              <span class="rating">⭐⭐⭐⭐</span>
               <a href="#" class="add-cart">Lo quiero!🤩</a>
             </div>
           </div>
